Project Files updated

--- a/EpServerEngine2.0/EpServerEngine/EpServerEngine110.vcxproj
+++ b/EpServerEngine2.0/EpServerEngine/EpServerEngine110.vcxproj
@@ -376,54 +376,17 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Sources\epBaseClientManual.cpp" />
-    <ClCompile Include="Sources\epBaseClientUDPManual.cpp" />
-    <ClCompile Include="Sources\epBasePacketParser.cpp" />
-    <ClCompile Include="Sources\epBaseServerObject.cpp" />
-    <ClCompile Include="Sources\epPacket.cpp" />
-    <ClCompile Include="Sources\epParserList.cpp" />
-    <ClCompile Include="Sources\epServerObjectList.cpp" />
-    <ClCompile Include="Sources\epBaseClient.cpp" />
-    <ClCompile Include="Sources\epBaseClientUDP.cpp" />
-    <ClCompile Include="Sources\epBaseServer.cpp" />
-    <ClCompile Include="Sources\epBaseServerWorker.cpp" />
-    <ClCompile Include="Sources\epBaseServerUDP.cpp" />
-    <ClCompile Include="Sources\epBaseServerWorkerUDP.cpp" />
-    <ClCompile Include="Sources\epServerObjectRemover.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
-    <ClInclude Include="EpLibraryHeaders\epBinaryFile.h" />
-    <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h" />
-    <ClInclude Include="EpLibraryHeaders\epEventEx.h" />
-    <ClInclude Include="EpLibraryHeaders\epLib.h" />
-    <ClInclude Include="EpLibraryHeaders\epLogWriter.h" />
-    <ClInclude Include="Headers\epBaseClientManual.h" />
-    <ClInclude Include="Headers\epBaseClientUDPManual.h" />
-    <ClInclude Include="Headers\epBasePacketParser.h" />
-    <ClInclude Include="Headers\epBaseServerObject.h" />
-    <ClInclude Include="Headers\epBaseServerSendObject.h" />
-    <ClInclude Include="Headers\epPacket.h" />
-    <ClInclude Include="Headers\epPacketContainer.h" />
-    <ClInclude Include="Headers\epParserList.h" />
-    <ClInclude Include="Headers\epse.h" />
-    <ClInclude Include="Headers\epServerConf.h" />
-    <ClInclude Include="Headers\epServerEngine.h" />
-    <ClInclude Include="Headers\epServerObjectList.h" />
-    <ClInclude Include="Headers\epBaseClient.h" />
-    <ClInclude Include="Headers\epBaseClientUDP.h" />
-    <ClInclude Include="Headers\epBaseServer.h" />
-    <ClInclude Include="Headers\epBaseServerWorker.h" />
-    <ClInclude Include="Headers\epBaseServerUDP.h" />
-    <ClInclude Include="Headers\epBaseServerWorkerUDP.h" />
     <ClInclude Include="EpLibraryHeaders\epAlgorithm.h" />
     <ClInclude Include="EpLibraryHeaders\epAssert.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseJob.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseJobProcessor.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseLock.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseOutputter.h" />
+    <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
     <ClInclude Include="EpLibraryHeaders\epBaseWorkerThread.h" />
+    <ClInclude Include="EpLibraryHeaders\epBinaryFile.h" />
     <ClInclude Include="EpLibraryHeaders\epBinarySearch.h" />
+    <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h" />
     <ClInclude Include="EpLibraryHeaders\epConsoleHelper.h" />
     <ClInclude Include="EpLibraryHeaders\epCriticalSectionEx.h" />
     <ClInclude Include="EpLibraryHeaders\epCStringEx.h" />
@@ -431,18 +394,20 @@
     <ClInclude Include="EpLibraryHeaders\epDelegate.h" />
     <ClInclude Include="EpLibraryHeaders\epDynamicArray.h" />
     <ClInclude Include="EpLibraryHeaders\epEndian.h" />
+    <ClInclude Include="EpLibraryHeaders\epEventEx.h" />
     <ClInclude Include="EpLibraryHeaders\epException.h" />
     <ClInclude Include="EpLibraryHeaders\epFastLog.h" />
     <ClInclude Include="EpLibraryHeaders\epFastSqrt.h" />
     <ClInclude Include="EpLibraryHeaders\epFileStream.h" />
     <ClInclude Include="EpLibraryHeaders\epFolderHelper.h" />
-    <ClInclude Include="EpLibraryHeaders\epFoundationLib.h" />
     <ClInclude Include="EpLibraryHeaders\epInsertionSort.h" />
     <ClInclude Include="EpLibraryHeaders\epInterlockedEx.h" />
     <ClInclude Include="EpLibraryHeaders\epJobScheduleQueue.h" />
     <ClInclude Include="EpLibraryHeaders\epKAryHeap.h" />
     <ClInclude Include="EpLibraryHeaders\epl.h" />
+    <ClInclude Include="EpLibraryHeaders\epLib.h" />
     <ClInclude Include="EpLibraryHeaders\epLocale.h" />
+    <ClInclude Include="EpLibraryHeaders\epLogWriter.h" />
     <ClInclude Include="EpLibraryHeaders\epMemory.h" />
     <ClInclude Include="EpLibraryHeaders\epMergeSort.h" />
     <ClInclude Include="EpLibraryHeaders\epMutex.h" />
@@ -476,10 +441,109 @@
     <ClInclude Include="EpLibraryHeaders\epWorkerThreadSingle.h" />
     <ClInclude Include="EpLibraryHeaders\epXMLFile.h" />
     <ClInclude Include="EpLibraryHeaders\epXMLite.h" />
+    <ClInclude Include="Headers\epAsyncTcpClient.h" />
+    <ClInclude Include="Headers\epAsyncTcpServer.h" />
+    <ClInclude Include="Headers\epAsyncTcpSocket.h" />
+    <ClInclude Include="Headers\epAsyncUdpClient.h" />
+    <ClInclude Include="Headers\epAsyncUdpServer.h" />
+    <ClInclude Include="Headers\epAsyncUdpSocket.h" />
+    <ClInclude Include="Headers\epBaseClient.h" />
+    <ClInclude Include="Headers\epBasePacketProcessor.h" />
+    <ClInclude Include="Headers\epBaseProxyHandler.h" />
+    <ClInclude Include="Headers\epBaseProxyServer.h" />
+    <ClInclude Include="Headers\epBaseServer.h" />
+    <ClInclude Include="Headers\epBaseServerObject.h" />
+    <ClInclude Include="Headers\epBaseSocket.h" />
+    <ClInclude Include="Headers\epBaseTcpClient.h" />
+    <ClInclude Include="Headers\epBaseTcpServer.h" />
+    <ClInclude Include="Headers\epBaseTcpSocket.h" />
+    <ClInclude Include="Headers\epBaseUdpClient.h" />
+    <ClInclude Include="Headers\epBaseUdpServer.h" />
+    <ClInclude Include="Headers\epBaseUdpSocket.h" />
+    <ClInclude Include="Headers\epClientInterfaces.h" />
+    <ClInclude Include="Headers\epClientPacketProcessor.h" />
+    <ClInclude Include="Headers\epIocpClientJob.h" />
+    <ClInclude Include="Headers\epIocpClientProcessor.h" />
+    <ClInclude Include="Headers\epIocpServerJob.h" />
+    <ClInclude Include="Headers\epIocpServerProcessor.h" />
+    <ClInclude Include="Headers\epIocpTcpClient.h" />
+    <ClInclude Include="Headers\epIocpTcpServer.h" />
+    <ClInclude Include="Headers\epIocpTcpSocket.h" />
+    <ClInclude Include="Headers\epIocpUdpClient.h" />
+    <ClInclude Include="Headers\epIocpUdpServer.h" />
+    <ClInclude Include="Headers\epIocpUdpSocket.h" />
+    <ClInclude Include="Headers\epPacket.h" />
+    <ClInclude Include="Headers\epPacketContainer.h" />
+    <ClInclude Include="Headers\epProxyServerInterfaces.h" />
+    <ClInclude Include="Headers\epProxyTcpHandler.h" />
+    <ClInclude Include="Headers\epProxyTcpServer.h" />
+    <ClInclude Include="Headers\epProxyUdpHandler.h" />
+    <ClInclude Include="Headers\epProxyUdpServer.h" />
+    <ClInclude Include="Headers\epse.h" />
+    <ClInclude Include="Headers\epServerConf.h" />
+    <ClInclude Include="Headers\epServerEngine.h" />
+    <ClInclude Include="Headers\epServerInterfaces.h" />
+    <ClInclude Include="Headers\epServerObjectList.h" />
     <ClInclude Include="Headers\epServerObjectRemover.h" />
+    <ClInclude Include="Headers\epServerPacketProcessor.h" />
+    <ClInclude Include="Headers\epSyncTcpClient.h" />
+    <ClInclude Include="Headers\epSyncTcpServer.h" />
+    <ClInclude Include="Headers\epSyncTcpSocket.h" />
+    <ClInclude Include="Headers\epSyncUdpClient.h" />
+    <ClInclude Include="Headers\epSyncUdpServer.h" />
+    <ClInclude Include="Headers\epSyncUdpSocket.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LICENSE" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Sources\epAsyncTcpClient.cpp" />
+    <ClCompile Include="Sources\epAsyncTcpServer.cpp" />
+    <ClCompile Include="Sources\epAsyncTcpSocket.cpp" />
+    <ClCompile Include="Sources\epAsyncUdpClient.cpp" />
+    <ClCompile Include="Sources\epAsyncUdpServer.cpp" />
+    <ClCompile Include="Sources\epAsyncUdpSocket.cpp" />
+    <ClCompile Include="Sources\epBaseClient.cpp" />
+    <ClCompile Include="Sources\epBasePacketProcessor.cpp" />
+    <ClCompile Include="Sources\epBaseProxyHandler.cpp" />
+    <ClCompile Include="Sources\epBaseProxyServer.cpp" />
+    <ClCompile Include="Sources\epBaseServer.cpp" />
+    <ClCompile Include="Sources\epBaseServerObject.cpp" />
+    <ClCompile Include="Sources\epBaseSocket.cpp" />
+    <ClCompile Include="Sources\epBaseTcpClient.cpp" />
+    <ClCompile Include="Sources\epBaseTcpServer.cpp" />
+    <ClCompile Include="Sources\epBaseTcpSocket.cpp" />
+    <ClCompile Include="Sources\epBaseUdpClient.cpp" />
+    <ClCompile Include="Sources\epBaseUdpServer.cpp" />
+    <ClCompile Include="Sources\epBaseUdpSocket.cpp" />
+    <ClCompile Include="Sources\epClientInterface.cpp" />
+    <ClCompile Include="Sources\epClientPacketProcessor.cpp" />
+    <ClCompile Include="Sources\epIocpClientJob.cpp" />
+    <ClCompile Include="Sources\epIocpClientProcessor.cpp" />
+    <ClCompile Include="Sources\epIocpServerJob.cpp" />
+    <ClCompile Include="Sources\epIocpServerProcessor.cpp" />
+    <ClCompile Include="Sources\epIocpTcpClient.cpp" />
+    <ClCompile Include="Sources\epIocpTcpServer.cpp" />
+    <ClCompile Include="Sources\epIocpTcpSocket.cpp" />
+    <ClCompile Include="Sources\epIocpUdpClient.cpp" />
+    <ClCompile Include="Sources\epIocpUdpServer.cpp" />
+    <ClCompile Include="Sources\epIocpUdpSocket.cpp" />
+    <ClCompile Include="Sources\epPacket.cpp" />
+    <ClCompile Include="Sources\epProxyServerInterfaces.cpp" />
+    <ClCompile Include="Sources\epProxyTcpHandler.cpp" />
+    <ClCompile Include="Sources\epProxyTcpServer.cpp" />
+    <ClCompile Include="Sources\epProxyUdpHandler.cpp" />
+    <ClCompile Include="Sources\epProxyUdpServer.cpp" />
+    <ClCompile Include="Sources\epServerInterface.cpp" />
+    <ClCompile Include="Sources\epServerObjectList.cpp" />
+    <ClCompile Include="Sources\epServerObjectRemover.cpp" />
+    <ClCompile Include="Sources\epServerPacketProcessor.cpp" />
+    <ClCompile Include="Sources\epSyncTcpClient.cpp" />
+    <ClCompile Include="Sources\epSyncTcpServer.cpp" />
+    <ClCompile Include="Sources\epSyncTcpSocket.cpp" />
+    <ClCompile Include="Sources\epSyncUdpClient.cpp" />
+    <ClCompile Include="Sources\epSyncUdpServer.cpp" />
+    <ClCompile Include="Sources\epSyncUdpSocket.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
