--- a/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj
@@ -360,6 +360,12 @@
     <ClInclude Include="EpLibraryHeaders\epBinaryFile.h" />
     <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h" />
     <ClInclude Include="EpLibraryHeaders\epEventEx.h" />
+    <ClInclude Include="EpLibraryHeaders\epIpcClient.h" />
+    <ClInclude Include="EpLibraryHeaders\epIpcClientInterfaces.h" />
+    <ClInclude Include="EpLibraryHeaders\epIpcConf.h" />
+    <ClInclude Include="EpLibraryHeaders\epIpcPipe.h" />
+    <ClInclude Include="EpLibraryHeaders\epIpcServer.h" />
+    <ClInclude Include="EpLibraryHeaders\epIpcServerInterfaces.h" />
     <ClInclude Include="EpLibraryHeaders\epLib.h" />
     <ClInclude Include="EpLibraryHeaders\epLogWriter.h" />
     <ClInclude Include="Headers\epBaseClientManual.h" />
