--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -1049,6 +1049,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epWinResizer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epWorkerThreadDelegate.h"
 				>
 			</File>
