--- a/EpServerEngine2.0/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine2.0/EpServerEngine/EpServerEngine90.vcproj
@@ -1491,6 +1491,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epWinResizer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epWorkerThreadDelegate.h"
 				>
 			</File>
