--- a/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
@@ -1039,6 +1039,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epWinResizer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epWorkerThreadDelegate.h"
 				>
 			</File>
